# DeepLabCut-live-GUI

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  example_recording_control.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  docs.yml  format.yml  python-package.yml  test.yml  testing-ci.yml
dlclive/: dlclive.py  dlcliveGUI.py
dlclive/camera/: __init__.py  camera.py  ic_camera.py  stream.py  test_pyqtgraph.py  video_feed.py
dlclive/processor/: processor.py
dlclive/processor/teensy_laser/: teensy_laser.py
dlclivegui/: __init__.py  camera_config_dialog.py  camera_controller.py  camera_process.py  config.py  dlc_processor.py  dlclivegui.py  gui.py  main.py  multi_camera_controller.py  pose_process.py  process.py  queue.py  tkutil.py  utils.py  video.py  video_recorder.py
dlclivegui/assets/: ascii_art.py
dlclivegui/camera/: __init__.py  aravis.py  basler.py  camera.py  opencv.py  pseye.py  tiscamera.py  tiscamera_linux.py  tiscamera_windows.py  tisgrabber_windows.py  video_feed.py
dlclivegui/cameras/: __init__.py  aravis_backend.py  base.py  basler_backend.py  config_adapters.py  factory.py  gentl_backend.py  opencv_backend.py
dlclivegui/cameras/backends/: __init__.py  aravis_backend.py  basler_backend.py  gentl_backend.py  opencv_backend.py
dlclivegui/cameras/backends/utils/: backend_loader.py  gentl_discovery.py  opencv_discovery.py
dlclivegui/gui/: camera_config_dialog.py  camera_loaders.py  main_window.py  recording_manager.py  theme.py
dlclivegui/gui/camera_config/: camera_config_dialog.py  loaders.py  preview.py  trigger_config_dialog.py  ui_blocks.py
dlclivegui/gui/misc/: color_dropdowns.py  drag_spinbox.py  eliding_label.py  elidinglabel.py  layouts.py  splash.py
dlclivegui/processor/: __init__.py  processor.py
dlclivegui/processor/teensy_laser/: teensy_laser.py
dlclivegui/processors/: GUI_INTEGRATION.md  PLUGIN_SYSTEM.md  __init__.py  dlc_processor_socket.py  examples.py  processor_utils.py  registry.py
dlclivegui/processors/custom/: mock_socket_processor.py  mock_unity_socket_client.ipynb
dlclivegui/services/: camera_controller.py  dlc_processor.py  multi_camera_controller.py  poet_processor.py  recording_manager.py  video_recorder.py
dlclivegui/services/pose_backends/: base.py  pose_processor.py
dlclivegui/temp/: __init__.py  engine.py
dlclivegui/utils/: config_models.py  display.py  poet_weights.py  settings_store.py  skeleton.py  stats.py  timestamps.py  utils.py
dlclivegui/video/: __init__.py  video.py
dlclivegui_tests/: conftest.py
dlclivegui_tests/fixtures/: fake_DLClive.py  fake_cameras_backend.py  fake_controller.py
dlclivegui_tests/test_gui/: test_end_to_end.py
dlclivegui_tests/tests_fixtures/: test_controller_fixture.py  test_fake_DLClive.py  test_fake_camera.py
docs/: README.md  _toc.yml  camera_support.md  features.md  install.md  myst.yml  user_guide.md
docs/_static/: custom.css
scripts/: opencv_cli.py
tests/: conftest.py  test_config.py
tests/cameras/: conftest.py  test_adapters.py  test_backend_discovery.py  test_factory.py  test_fake_backend.py
tests/cameras/backends/: conftest.py  test_aravis_backend.py  test_basler_backend.py  test_generic_contracts.py  test_gentl_backend.py  test_gentl_trigger.py  test_opencv_backend.py
tests/cameras/backends/utils/: test_backend_loader.py  test_gentl_discovery.py  test_opencv_discovery.py
tests/compat/: conftest.py  test_dlclive_package_compat.py
tests/custom_processors/: test_base_processor.py  test_builtin_discovery_utils.py  test_processor_rec_context.py
tests/gui/: conftest.py  test_app_entrypoint.py  test_ascii_art.py  test_main.py  test_misc.py  test_pose_overlay.py  test_rec_manager.py  test_recording_gui.py  test_recording_paths_ui.py  test_splash_screen.py
tests/gui/camera_config/: test_cam_dialog_e2e.py  test_cam_dialog_unit.py  test_trigger_config.py
tests/gui/main_window/: test_preview.py  test_recording.py  test_ui.py  test_user_config.py
tests/services/: test_camera_controller.py  test_dlc_processor.py  test_multicam_controller.py  test_pose_contract.py  test_video_recorder.py
tests/services/gui/: conftest.py
tests/utils/: test_display.py  test_settings_store.py  test_stats.py  test_timestamps.py  test_utils.py
